--- a/readme
+++ b/readme
@@ -1,18 +1,2 @@
-Rayatiga is an SME that offers professional web development services focused on 
-creating simple, high-quality static websites for landing pages, portfolios, 
-and business profiles. With a clean design approach and seamless functionality, 
-Rayatiga helps clients build effective online presences.
-
-Each package includes free maintenance, allowing clients to add analytics, 
-update content, or make design tweaks at no extra cost. This ongoing support 
-ensures your website stays relevant and up-to-date without any hassle.
-
-Rayatiga is dedicated to helping personal brands and businesses share their 
-unique stories. Whether you're building a personal website or enhancing your 
-business profile, Rayatiga creates websites that truly represent your identity 
-and vision.
-
-See our open opportunities and become part of our journey in shaping the future 
-together. Your passion fuels our progress. Let's grow, excel, and succeed as a 
-unified team.
-
+The Rayatiga is a dedicated SME specializing in web development, maintenance
+migration, and SEO optimization.
